Removing outline from elements

--- a/client/src/styles/header.scss
+++ b/client/src/styles/header.scss
@@ -95,6 +95,7 @@
           -moz-box-shadow: 2px 2px 5px 2px $em-bg-gray-dark;
           -webkit-box-shadow: 2px 2px 5px 2px $em-bg-gray-dark;
           box-shadow: 2px 2px 5px 2px $em-bg-gray-dark;
+          outline: none;
 
           .menu-item {
             font-size: 13px;
