--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -18,8 +18,8 @@
 @import './postlikesmodal';
 @import './uploadphotomodal';
 
-@import '../../../node_modules/react-datepicker/dist/react-datepicker.css';
-@import '../../../node_modules/react-bootstrap-typeahead/css/Typeahead.css';
+@import '../../../node_modules/react-datepicker/dist/react-datepicker.min.css';
+@import '../../../node_modules/react-bootstrap-typeahead/css/Typeahead.min.css';
 
 ::selection {
   background-color: $em-bg-gray-verylight;
