--- a/server/views/signup.ejs
+++ b/server/views/signup.ejs
@@ -45,9 +45,11 @@
                             <input type="password" name="password" required/>
                         </div>
                     </div>
-                    <!--<div class="form-group">-->
-                        <!--When you "Submit", you agree to Express To Match's Terms of Service. We will manage information about you as described in our Privacy Policy, and Cookie Policy.-->
-                    <!--</div>-->
+                    <div class="form-group">
+                        <label for="userAccept">
+                            <input type="checkbox" id="userAccept" name="userAccept" required/> Agree to our <a href="/privacy" target="_blank">Privacy Policy</a> and <a href="/terms" target="_blank">Terms of Service</a>
+                        </label>
+                    </div>
                     <div class="form-group">
                         <button type="submit" class="em-form-control">Submit</button>
                     </div>
