--- a/server/scss/signup.scss
+++ b/server/scss/signup.scss
@@ -82,6 +82,21 @@ article.sign-up{
             opacity: 0.8;
           }
         }
+        a{
+          font-weight: normal;
+          text-decoration: none;
+          cursor: hand;
+
+          &:hover{
+            text-decoration: underline;
+          }
+          &:active{
+            //color:#181ca0;
+          }
+          &:visited{
+            //color:#1f24cc;
+          }
+        }
       }
     }
     .content-social{
