--- a/server/views/partial/header.ejs
+++ b/server/views/partial/header.ejs
@@ -7,6 +7,7 @@
             </div>
         </a>
     </div>
+    <% if (typeof(generic) === "undefined") { %>
     <div class="right-content">
         <div class="menu-items">
             <div class="menu-item">
@@ -20,4 +21,5 @@
 
         </div>
     </div>
+    <% } %>
 </header>
