--- a/server/views/terms.ejs
+++ b/server/views/terms.ejs
@@ -1,78 +1,95 @@
-import React from 'react';
-
-const Terms = () => {
-    return (
+<!doctype html>
+<html>
+<head>
+    <title>Express To Match - Express and find your partner</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+          integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link href="/public/css/main.css" rel="stylesheet" type="text/css"/>
+    <style>
+        .terms-content {
+            margin: 0 auto;
+            width: 80%;
+            min-width: 820px;
+            padding: 10px;
+        }
+    </style>
+</head>
+<body>
+<div class="container">
+    <%- include('partial/header.ejs', {generic: true}); %>
+    <div class="terms-content">
         <div>
-            <h3><b>Terms of Use </b></h3><br/>
+            <h2><b>Terms of Use </b></h2>
 
             <ul>
-                <li>* Introduction</li>
-                <li>* Your relation with Express To Match</li>
-                <li>* Using our services</li>
-                <li>* Content in our services</li>
-                <li>* Software in our services</li>
-                <li>* In case of problems or disagreements</li>
-                <li>* About these terms</li>
+                <li>Introduction</li>
+                <li>Your relation with Express To Match</li>
+                <li>Using our services</li>
+                <li>Content in our services</li>
+                <li>Software in our services</li>
+                <li>In case of problems or disagreements</li>
+                <li>About these terms</li>
             </ul>
-            <br/>
 
-            <h4><b>Introduction</b></h4><br/>
+
+            <h3><b>Introduction</b></h3>
             <p>These terms of Service reflect the way Express To Match does business, the laws that apply to our
                 company, and things we have believed to be true to our users and also towards the welfare of our
                 community. As of result, these Terms of Service help define our relationship with you as you interact
-                with our services. For Example, these terms contain the following topic headings. </p><br/>
+                with our services. For Example, these terms contain the following topic headings. </p>
 
             <ul>
-                <li>* <i>What you can expect from us</i>, which describes how we provide and develop our services.</li>
-                <li>* <i>What we expect from you</i>, which establishes certain rules for using our services.</li>
-                <li>* <i>Content in our services</i>, which describes the intellectual property rights to the content
+                <li><i>What you can expect from us</i>, which describes how we provide and develop our services.</li>
+                <li><i>What we expect from you</i>, which establishes certain rules for using our services.</li>
+                <li><i>Content in our services</i>, which describes the intellectual property rights to the content
                     you find
                     in our services - whether that content belongs to you, Express To Match or others.
                 </li>
-                <li>* <i>In case of problems and disagreements</i>, which describe other legal rights you have, and what
+                <li><i>In case of problems and disagreements</i>, which describe other legal rights you have, and what
                     to
                     expect in case someone violates these terms.
                 </li>
             </ul>
-            <br/>
 
-            <p>Besides these terms, we also publish a Privacy Policy. Although it’s not part of these terms, we
+
+            <p>Besides these terms, we also publish a <a href="/privacy">Privacy Policy</a>. Although
+                it’s not part of these terms, we
                 encourage you to read it to better understand how you can update, manage and delete your
-                information. </p><br/>
+                information. </p>
 
-            <h4>Age Requirements</h4><br/>
+            <h3>Age Requirements</h3>
 
             <p>Below are the minimum age requirements to create and manage your own Express To Match Account.</p>
 
             <p>Note: For users below the minimum required age, parents should monitor their child’s activity on the
                 internet and Express To Match is not liable for such users from accessing and using our services,
                 without the proper consent to our terms, while signing up.
-            </p><br/>
+            </p>
 
             <p>For users of all countries, 16 is the minimum age, to create and manage your Express To Match
-                account. </p><br/>
+                account. </p>
             <p>Across our services, if it appears that you may not be old enough to have an Express To Match account,
                 your account may be disabled. If you do meet the age requirements to manage your own account, create a
-                new account or contact us to check if it is possible to re-enable your account. </p><br/>
+                new account or contact us to check if it is possible to re-enable your account. </p>
 
-            <h4><b>Your relation with Express To Match</b></h4><br/>
+            <h3><b>Your relation with Express To Match</b></h3>
 
             <p>These terms help define the relationship between you and Express To Match. Broadly speaking, we give you
                 permission to use our services, if you agree to follow these terms, which reflect how Express To Match
                 works and how we earn money. When we speak of “Express To Match”, “we”, “us”, and “our”, we mean Express
                 To Match and its affiliates.
-            </p><br/>
+            </p>
 
-            <h4><b>What you can expect from us</b></h4><br/>
+            <h3><b>What you can expect from us</b></h3>
 
-            <p>We provide a broad range of services that are subject to these terms, including:</p><br/>
+            <p>We provide a broad range of services that are subject to these terms, including:</p>
 
             <ul>
-                <li>* apps</li>
-                <li>* integrated social media experience</li>
-                <li>* simple value adds like e-mails marketing and other promotions</li>
+                <li>apps</li>
+                <li>integrated social media experience</li>
+                <li>simple value adds like e-mails marketing and other promotions</li>
             </ul>
-            <br/>
+
 
             <p>Our services are designed to work in a quality way, that is to guarantee a good User experience and
                 significant value.</p>
@@ -81,32 +98,32 @@ const Terms = () => {
                 ways, and using necessary data models and user experience to achieve this. As part of this continual
                 improvement, we sometimes add or remove features and(or) increase or limit our services. Also to make
                 this better for our users, we sometimes request more information, but within the clauses mentioned in
-                our Privacy policy.</p><br/>
+                our Privacy policy.</p>
 
-            <h4><b>What we expect from you </b></h4><br/>
+            <h3><b>What we expect from you </b></h3>
 
             <p>The permission we give to use our services continue as long as you meet our responsibilities in following
                 these terms. We also make various policies, contact channels, FAQs, and Safety related information and
-                publish to you on a regular basis through means determined right for our organization.</p>
+                publish to you on a regular basis through means determined right for our organization</p>
 
             <p>Although we give permission to use our services, we retain any intellectual property rights we have in
-                the services.</p><br/>
+                the services.</p>
 
-            <p>1. Respect Others:</p><br/>
+            <p>1. Respect Others:</p>
             <p>Many of our services allow you to interact with others. We want to maintain a respectful environment for
-                everyone, which means you must follow these basic rules of conduct:</p><br/>
+                everyone, which means you must follow these basic rules of conduct:</p>
 
             <ul>
-                <li>- comply with applicable laws, including export control, sanctions, and human trafficking laws</li>
-                <li>- respect the rights of others, including privacy and intellectual property rights</li>
-                <li>- don’t abuse or harm others or yourself (or threaten or encourage such abuse or harm) — for
+                <li>comply with applicable laws, including export control, sanctions, and human trafficking laws</li>
+                <li>respect the rights of others, including privacy and intellectual property rights</li>
+                <li>don’t abuse or harm others or yourself (or threaten or encourage such abuse or harm) — for
                     example, by misleading, defrauding, defaming, bullying, harassing, or stalking others
                 </li>
-                <li>- don’t abuse, harm, interfere with, or disrupt the services</li>
+                <li>don’t abuse, harm, interfere with, or disrupt the services</li>
             </ul>
-            <br/>
 
-            <p>2. Permission to use your content:</p><br/>
+
+            <p>2. Permission to use your content:</p>
 
             <p>Some of our services are designed to let you upload, submit, store, send, receive or share your content.
                 You
@@ -114,96 +131,97 @@ const Terms = () => {
                 you
                 want to provide. If you choose to upload or provide content, please make sure you have the necessary
                 rights
-                to do so and the content is lawful.</p><br/>
+                to do so and the content is lawful.</p>
 
-            <h4><b>Using our services</b></h4><br/>
+            <h3><b>Using our services</b></h3>
 
             <p>If you meet our Age requirements as mentioned in this terms, you can create an Express To Match account
                 for your convenience. Some services require that you provide us the necessary information to work - for
                 example, your name and e-mail as a minimum, and optionally, more personal information like your age,
                 gender, caste, job, location, interests etc. that you may provide with us using our service or agree to
                 provide to us from your facebook profile, when you sign up with us using facebook authentication
-                mechanism.</p><br/>
+                mechanism.</p>
 
             <p>You are responsible for what you do with your Express To Match account, including taking reasonable steps
                 to keep your account secure using good passwords, and we regularly encourage your to change them using
-                our Reset Password service in the login section.</p><br/>
+                our Reset Password service in the login section.</p>
 
             <p>To provide you with our services, we sometimes send you service announcements and other information. To
-                learn more about how we communicate with you, see Express To match’s Privacy Policy.</p><br/>
+                learn more about how we communicate with you, see Express To match’s Privacy Policy.</p>
 
             <p>If you choose to give us feedback, such as suggestions to improve our services, we may act on your
-                feedback without obligation to you.</p><br/>
+                feedback without obligation to you.</p>
 
-            <h4><b>Content in our services</b></h4><br/>
+            <h3><b>Content in our services</b></h3>
 
             <p>Some of our services give you the opportunity to make your content publicly available — for example, you
                 might post a proposal or a comment using our service and people can share it by copying the link to the
-                particular post in anyway they deem appropriate.</p><br/>
+                particular post in anyway they deem appropriate.</p>
 
             <p>We retain any intellectual property rights that we have in our content. Don’t remove, obscure, or alter
                 any of our branding, logos, or legal notices. If you want to use our branding or logos, please contact
-                us.</p><br/>
+                us.</p>
 
-            <h4><b>Software in our services</b></h4><br/>
+            <h3><b>Software in our services</b></h3>
 
             <p>We give you the permission to use our software as part of accessing our website. The license we give you
-                is:</p><br/>
+                is:</p>
 
             <ul>
-                <li>* worldwide, which means it’s valid anywhere in the world</li>
-                <li>* non-exclusive, which means that we can license the software to others</li>
-                <li>* royalty-free, which means there are no fees for this license</li>
-                <li>* personal, which means it doesn’t extend to anyone else</li>
-                <li>* non-assignable, which means you’re not allowed to assign the license to anyone else</li>
+                <li>worldwide, which means it’s valid anywhere in the world</li>
+                <li>non-exclusive, which means that we can license the software to others</li>
+                <li>royalty-free, which means there are no fees for this license</li>
+                <li>personal, which means it doesn’t extend to anyone else</li>
+                <li>non-assignable, which means you’re not allowed to assign the license to anyone else</li>
             </ul>
-            <br/>
+
 
             <p>You may not copy, modify, distribute, sell, or lease any part of our services or software.Also, you may
                 not reverse engineer or attempt to extract any of our source code unless you have our written permission
-                or applicable law lets you do so.</p><br/>
+                or applicable law lets you do so.</p>
 
-            <h4><b>In case of problems or disagreements</b></h4><br/>
+            <h3><b>In case of problems or disagreements</b></h3>
 
             <p>These terms only limit our responsibilities as allowed by applicable law. Specifically, these terms don’t
                 limit our liability for death or personal injury, fraud, fraudulent misrepresentation, gross negligence,
                 or willful misconduct. Other than the rights and responsibilities described in this terms, we won’t be
-                responsible for any losses, unless they’re caused by our breach of these terms.</p><br/>
+                responsible for any losses, unless they’re caused by our breach of these terms.</p>
 
             <p>If we reasonably believe that any of your content (1) breaches these terms (2) violates applicable
                 law, or (3) could harm our users, third parties, or Express To Match, then we reserve the right to
                 take down some or all of that content in accordance with applicable law. Examples include child
-                pornography, content that facilitates human trafficking or harassment, content that promotes profanity, and content that infringes
+                pornography, content that facilitates human trafficking or harassment, content that promotes profanity,
+                and content that infringes
                 someone else’s Intellectual
                 Property rights. In all these cases, and other situations as deemed inappropriate conduct per our
                 discretion, we reserves the right to suspend or terminate your access to the services or delete your
-                Account, without further explanation.</p><br/>
+                Account, without further explanation.</p>
 
-            <h4><b>About these terms</b></h4><br/>
+            <h3><b>About these terms</b></h3>
 
             <p>By law, you have certain rights that can’t be limited by a contract like these terms of service. These
                 terms
-                are in no way intended to restrict those rights.</p><br/>
+                are in no way intended to restrict those rights.</p>
 
             <p>These terms describe the relationship between you and Express To match. They don’t create any legal
                 rights
                 for other people or organizations, even if others benefit from that relationship under these terms.</p>
-            <br/>
+
 
             <p>We want to make these terms easy to understand and use. Not all services we provide may be applicable in
-                your country.</p><br/>
+                your country.</p>
 
             <p>If it turns out that a particular term is not valid or enforceable, this will not affect any other
-                terms.</p><br/>
+                terms.</p>
 
             <p>If you don’t follow these terms or the service-specific additional terms, and we don’t take action right
                 away, that doesn’t mean we’re giving up any rights that we may have, such as taking action in the
-                future.</p><br/>
+                future.</p>
 
             <p>We may update these terms (1) to reflect changes in our services or how we do business — for example,
                 when
                 we add new services, features, technologies, pricing, or benefits (or remove old ones), (2) for legal,
-                regulatory, or security reasons, or (3) to prevent abuse or harm.</p><br/>
+                regulatory, or security reasons, or (3) to prevent abuse or harm.</p>
 
             <p>If we materially change these terms, we’ll provide you with reasonable advance notice and the opportunity
                 to
@@ -212,12 +230,16 @@ const Terms = () => {
                 preventing ongoing abuse or responding to legal requirements. If you don’t agree to the new terms, you
                 should remove your content and stop using the services. You can also end your relationship with us at
                 any
-                time by closing your Express To Match Account.</p><br/>
+                time by closing your Express To Match Account.</p>
 
             <p>Effective Date: May 4, 2020</p>
 
         </div>
-    );
-};
 
-export default Terms;
+    </div>
+
+    <% include partial/footer.ejs %>
+
+</div>
+</body>
+</html>
