--- a/server/scss/footer.scss
+++ b/server/scss/footer.scss
@@ -1,32 +1,34 @@
-footer{
-  background-color: #3f4257;
-  z-index: 1001;
-  padding: 10px;
+#footer{
+  width: 100%;
+  background-color: $em-bg-gray-dark;
+  box-shadow: 0 0 34px 0 $em-border-gray;
+  padding: 10px 0;
+  //position: sticky;
+  //position: -webkit-sticky;
+  //position: -moz-sticky;
+  //position: -ms-sticky;
+  //position: -o-sticky;
+  //bottom: 0;
 
-  .footer-container{
-    margin: auto;
-    width: 80%;
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: space-between;
-    min-width: 820px;
+  .footer-message{
+    margin: 0 auto;
+    text-align: center;
+    font-size: 10px;
 
-    .subscription{
-      display: flex;
+    a{
+      font-weight: normal;
+      text-decoration: none;
+      cursor: hand;
 
-      .left-panel,.right-panel{
-        width: 50%;
-        padding: 10px;
-        color: #fff;
+      &:hover{
+        text-decoration: underline;
       }
-    }
-    .links{
-      padding: 10px;
-      color: #fff;
-    }
-    .social{
-      padding: 10px;
-      color: #fff;
+      &:active{
+        //color:#181ca0;
+      }
+      &:visited{
+        //color:#1f24cc;
+      }
     }
   }
 }
