--- a/server/views/privacy.ejs
+++ b/server/views/privacy.ejs
@@ -23,7 +23,7 @@
 
             <p>This privacy statement applies to the treatment of personally identifiable information submitted by, or
                 otherwise obtained from, you in connection with the associated application Express To Match. The
-                Application is provided by EXPRESS TO MATCH organization. By using or otherwise accessing the
+                Application is provided by Express To Match organization. By using or otherwise accessing the
                 Application, you acknowledge that you accept the practices and policies outlined in this Privacy
                 Statement.</p>
 
@@ -31,7 +31,7 @@
 
             <p>We collect the following types of information from our users:</p>
 
-            <p>Personal Information You Provide to Us.</p>
+            <p><b>Personal Information You Provide to Us.</b></p>
 
             <p>We may receive and store any information you submit to the Application (or otherwise authorize us to
                 obtain – such as, data from your Facebook account). The types of personal information collected may
@@ -39,16 +39,30 @@
                 demographic information, and any other information necessary for us to provide the Application
                 services.</p>
 
-            <p>Personal Information Collected Automatically.</p>
+            <p><b>Personal Information Collected Automatically.</b></p>
             <p>We receive and store certain types of usage related information whenever you interact with Application.
-                For example, EXPRESS TO MATCH may automatically receive and record information regarding your computer’s
+                For example, Express To Match may automatically receive and record information regarding your computer’s
                 IP address, browser information, Facebook user ID, email and links clicked in the application. Such
                 information may be shared in aggregate (non-personally identifiable) form with our developers for purely
                 analytical purpose to improve the application features and not intended for any outside use.</p>
 
+            <p><b>Cookies.</b></p>
+            <p>A cookie is a small file placed onto your device that enables Express To Match features and
+                functionality.Any browser visiting our sites may receive cookies from us. We use persistent cookies,
+                which may help us recognize you as an existing user, so it’s easier to return to Express To Match or
+                interact with our Services without signing in again. A persistent cookie stays in your browser and will
+                be read by Express To Match when you return to our site. We use cookies and similar technologies to:<p>
+            <ul><li>recognize you when you visit our Services.</li>
+                <li>make your interactions with our Services faster and more secure.</li>
+            <li>remember information about your browser and your preferences</li>
+            <li>show relevant advertising to you more effectively, both on and off our Services and to measure the
+                performance of such ads</li>
+            <li>learn more about how well our Services and plugins perform in different locations.</li>
+            </ul>
+
             <h3>How does Express To Match use the information it collects?</h3>
 
-            <p>EXPRESS TO MATCH uses the information internally, to analyze, develop and improve its products and
+            <p>Express To Match uses the information internally, to analyze, develop and improve its products and
                 services.
             </p>
 
@@ -59,7 +73,7 @@
 
             <h3>What personal information can I access?</h3>
 
-            <p>EXPRESS TO MATCH allows you to access the following information about you for the purpose of
+            <p>Express To Match allows you to access the following information about you for the purpose of
                 viewing, and in certain situations, updating that information. This list may change in the event the
                 Application changes.</p>
 
@@ -74,9 +88,9 @@
 
             <h3>Can children use the application?</h3>
 
-            <p>Our site and the services available through EXPRESS TO MATCH are not intended for children under the
+            <p>Our site and the services available through Express To Match are not intended for children under the
                 age
-                of 16. EXPRESS TO MATCH does not knowingly or specifically collect information about children under
+                of 16. Express To Match does not knowingly or specifically collect information about children under
                 the
                 age of 16 and believes that children of any age should get their parents’ consent before giving out
                 any
@@ -84,7 +98,7 @@
 
             <h3>Changes to this privacy statement</h3>
 
-            <p>EXPRESS TO MATCH may amend this Privacy Statement from time to time. Use of information we collect
+            <p>Express To Match may amend this Privacy Statement from time to time. Use of information we collect
                 now
                 is subject to the Privacy Statement in effect at the time such information is used. If we make
                 changes
