Responsive Support - Initial Version - Adding meta tag for viewport.

--- a/server/views/terms.ejs
+++ b/server/views/terms.ejs
@@ -7,6 +7,7 @@
     <link href="/public/css/main.css" rel="stylesheet" type="text/css"/>
     <style>
         .terms-content {
+            flex: 1 1 auto;
             margin: 0 auto;
             width: 80%;
             min-width: 820px;
