--- a/client/src/styles/posts.scss
+++ b/client/src/styles/posts.scss
@@ -205,16 +205,21 @@
       button.today-filter,
       button.clear-quick-filter{
         align-self: flex-end;
-        margin-bottom: 10px;
+        margin: 10px 0;
         background-color: $em-alt-btn-bg;
         color: $em-alt-btn-text;
         -moz-outline: none;
         -webkit-outline: none;
         outline: none;
-        cursor: pointer;
-        font-size: 13px;
-        border-radius: 5px;
         border: 1px solid $em-border-gray;
+        font-size: 14px;
+        width: auto;
+        cursor: pointer;
+        border-radius: 3px;
+        font-weight: 600;
+        min-height: 36px;
+        padding: 0 16px;
+        vertical-align: middle;
 
         &:active{
           background: $em-alt-btn-bg-active;
