--- a/client/src/styles/profile.scss
+++ b/client/src/styles/profile.scss
@@ -112,7 +112,7 @@
             border-color: #ff5e3a;
             color: #fff;
           }
-          a{
+          a.edit-profile{
             outline: none;
             font-size: 14px;
             width: auto;
