--- a/server/views/partial/footer.ejs
+++ b/server/views/partial/footer.ejs
@@ -1,6 +1,6 @@
 <div id="footer">
     <div class="footer-message">
         Copyright @ 2020 Express To Match, India. All rights reserved.
-        <a href="/privacy" target="_blank">Privacy Policy</a> & <a href="/terms" target="_blank">Terms of Use</a>
+        <a href="/privacy" target="_blank">Privacy Policy</a> and <a href="/terms" target="_blank">Terms of Use</a>
     </div>
 </div>
