--- a/server/views/login.ejs
+++ b/server/views/login.ejs
@@ -1,7 +1,12 @@
 <!doctype html>
 <html>
 <head>
-    <title>Express To Match - Express and find your partner</title>
+    <title>Express To Match - Find love anonymously</title>
+    <meta name="title" content="Express To Match - Find love anonymously" />
+    <meta name="description" content ="Find love using Express To match, anonymously" />
+    <meta name="viewport" content="width=821, maximum-scale=1" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link href="/public/css/main.css" rel="stylesheet" type="text/css" />
 </head>
