--- a/server/views/forgot.ejs
+++ b/server/views/forgot.ejs
@@ -1,6 +1,16 @@
 <!doctype html>
 <html>
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-170271631-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-170271631-1');
+    </script>
+
     <title>Express To Match - Find love anonymously</title>
     <meta name="title" content="Express To Match - Find love anonymously" />
     <meta name="description" content ="Find love using Express To match, anonymously" />
