Adding triangle pointer to menu

--- a/client/src/styles/header.scss
+++ b/client/src/styles/header.scss
@@ -136,6 +136,19 @@
               vertical-align: middle;
             }
           }
+          &::before{
+            content: '';
+            position: absolute;
+            right: 8px;
+            top: -4px;
+            width: 0;
+            height: 0;
+            border-left: 5px solid transparent;  /* left arrow slant */
+            border-right: 5px solid transparent; /* right arrow slant */
+            border-bottom: 5px solid #fff; /* bottom, add background color here */
+            font-size: 0;
+            line-height: 0;
+          }
         }
       }
     }
