--- a/client/src/styles/comments.scss
+++ b/client/src/styles/comments.scss
@@ -200,10 +200,16 @@
                   cursor: pointer;
                 }
               }
+              .reply-date{
+                color: $em-text-gray-light;
+                padding: 0;
+                font-size: 11px;
+              }
               .content{
                 display: flex;
                 justify-content: space-between;
                 word-break: break-word;
+                padding: 5px 0;
                 .text{  }
                 .del-icon{
                   cursor: pointer;
