--- a/client/src/styles/comments.scss
+++ b/client/src/styles/comments.scss
@@ -56,6 +56,9 @@
               border-radius: 50%;
               margin-right: 10px;
             }
+            .user-info{
+              display: flex;
+            }
           }
           .comment-details {
             flex: 1 0 0;
