--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -16,6 +16,7 @@
 @import './contactus.scss';
 @import './postlikesmodal';
 @import './uploadphotomodal';
+@import './popover';
 
 @import '../../../node_modules/react-datepicker/dist/react-datepicker.min.css';
 @import '../../../node_modules/react-bootstrap-typeahead/css/Typeahead.min.css';
