Updating widths of screen for bigger displays. Updated otherProfile logic to check against logged in user id.

--- a/client/src/styles/profile.scss
+++ b/client/src/styles/profile.scss
@@ -1,5 +1,5 @@
 #profile{
-  width: 80%;
+  width: 60%;
   min-width: 790px;
   margin: 10px auto;
   background-color: $em-bg-gray-medium;
@@ -34,6 +34,29 @@
         .change-pic{
           display: none;
         }
+      }
+    }
+    .express-interest{
+      align-self: flex-end;
+      margin: 10px 0;
+      background-color: #09a7f3;
+      color: #fff;
+      -moz-outline: none;
+      -webkit-outline: none;
+      outline: none;
+      border: 1px solid #363636;
+      font-size: 14px;
+      cursor: pointer;
+      border-radius: 3px;
+      font-weight: 600;
+      min-height: 36px;
+      padding: 0 16px;
+      vertical-align: middle;
+      width: 100%;
+
+      &:active{
+        background: none;
+        color: #09a7f3;
       }
     }
   }
