--- a/client/src/styles/content.scss
+++ b/client/src/styles/content.scss
@@ -1,7 +1,7 @@
 #content{
   flex: 1 1 auto;
-  margin: 0 auto;
-  width: 80%;
+  //margin: 0 auto;
+  //width: 80%;
   min-width: 820px;
-  padding: 10px;
+  //padding: 10px;
 }
